--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.8.0",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "cross-env": "^10.1.0",
@@ -32,10 +33,12 @@
     "mongoose": "^8.18.3",
     "mongoose-sequence": "^6.0.1",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "nodemon": "^3.1.11",
     "path": "^0.12.7",
     "url": "^0.11.4",
+    "uuid": "^13.0.0",
     "winston": "^3.18.3"
   }
 }
